# capstoneproject

./: .gitattributes  .gitignore  CITATION.cff  LICENSE  README.md  bandit.yml  pyproject.toml  requirements.txt
data/.ipynb_checkpoints/: capstone-eda-checkpoint.ipynb
docs/: Capstone Blueprint.txt  Capstone.pptx  Capstone_Blueprint.md  DATA 4381 Project Proposal.docx  Proposal_Outline.md  Roadmap.md
imr_regression_model/: classification_report.txt  imr_results_summary.txt  regression_report.txt  regressor_metrics.json
models/: imr_classifier.py  imr_regressor.py  imr_regressor2.py  imr_xgb_regressor.py  imr_xgb_regressor2.py  knn.py  knn_base.py  knn_regression.py  xgb_regression.py  xgb_regression2.py
notebooks/: Draft.md  EDA_Proposal_Notebook2.ipynbd  EDA_Proposal_Preliminary.ipynb  EDA_Proposal_SQL.ipynb  EDA_Proposal_SQL_Python.ipynb  EDA_Proposal_Start.ipynb  Readme_Draft.md  capstone-eda.ipynb
notebooks/.ipynb_checkpoints/: capstone-eda-checkpoint.ipynb
notebooks/data-cleaning/: data-cleaning-by-state-and-district.ipynb  null-missing-values-by-district.ipynb  null-missing-values-by-state.ipynb  null-missing-values.ipynb  outliers.ipynb
prototype/: imr_classifier.py
scripts/: knn_imputer.py  rf_imputer.py
submissions/: cpu_info.txt  environment_check_output.txt  gpu_info.txt  placemarker.txt
test/: check_compute_env.py  compute.py  gpu.py  test.py  test2.py  test3.py  test4.py  test5.py  test6.py
tools/: imputation_evaluator.py  knn_imputer.py  mice_imputer.py  mice_imputer2.py  mice_imputer3.py  regression_imputer.py  rf_imputer.py
(+37 files in other folders)
