[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "capstone-project-1"
version = "0.1.0"
description = "Capstone Project 1: KNN XGB regression models + Jupyter EDA/model tests. ML for IMR prediction."
dependencies = [
    "jupyterlab>=4.0",
    "ipykernel>=6.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "scipy>=1.11",
    "joblib>=1.3",
    "seaborn>=0.13",
    "matplotlib>=3.8",
    "plotly>=5.17",
    "jupyterlab-widgets",
    "fonttools>=4.61.0", 
    "urllib3>=2.6.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4", "pytest-cov", "nbval",
    "black>=23.0", "flake8",
    "bandit>=1.7", "pip-audit>=2.7",
    "pre-commit", "jupyterlab-lsp"
]

[tool.setuptools.packages.find]
where = ["models"]
include = ["models*"]
namespaces = false
